--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -1,3 +1,6 @@
+html {
+  height: 100%;
+}
 img {
   max-width: 100%;
 }
@@ -11,8 +14,9 @@ body {
   text-align: center;
   margin-left: 10px;
   margin-right: 10px;
-  }
-
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 hr {
@@ -57,4 +61,8 @@ a:visited {
 
 i {
   color: grey;
+}
+
+footer {
+  margin: 0 auto;
 }
