--- a/public/styles/module.css
+++ b/public/styles/module.css
@@ -14,12 +14,26 @@
   display: block;
 }
 
+.input {
+  width: 75px;
+}
+
+.zipH3 {
+  display: inline;
+  padding: 0px 5px;
+  font-size: 20px;
+}
+
 .dogImage {
   display: none;
 }
 
 .back > h3 {
   display: none;
+}
+
+.bio {
+  font-size: 20px;
 }
 
 @media only screen and (min-width: 640px) {
@@ -46,6 +60,12 @@
     margin: 0 auto;
   }
 
+  /*form {
+    display: inline;
+    padding: 0px 5px;
+    font-size: 25px;
+  }*/
+
   .circularImage {
     height: 250px;
     width: 250px;
@@ -67,6 +87,8 @@
   .dogImage {
     display: inline;
   }
+
+  /*CSS animation/pic flip code (below) obtained from https://davidwalsh.name/css-flip*/
 
   .back > h3 {
     display: block;
