--- a/public/styles/img.css
+++ b/public/styles/img.css
@@ -10,3 +10,22 @@ img {
   width: 600px;
   height: 400px;
 }
+
+#dog-image {
+  width: 100px;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#bone {
+  width: 50px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#zipInput {
+  font-family: 'Open Sans Condensed';
+  font-size: 17px;
+}
