--- a/public/styles/img.css
+++ b/public/styles/img.css
@@ -22,3 +22,10 @@ img {
   font-family: 'Open Sans Condensed';
   font-size: 17px;
 }
+
+#invalid-img {
+  width: 85%;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
