--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -2,6 +2,11 @@ html {
   height: 100%;
 }
 
+strong {
+  font-size: 20px;
+  font-family: 'Open Sans Condensed';
+}
+
 img {
   max-width: 100%;
 }
