--- a/public/styles/module.css
+++ b/public/styles/module.css
@@ -4,6 +4,10 @@
   display: block;
 }
 
+#form-div {
+  font-size: 24px;
+}
+
 #content {
   font-family: 'Open Sans Condensed';
   font-size: 17px;
@@ -166,5 +170,28 @@ input {
   /* back, initially hidden pane */
   .back {
     transform: rotateY(180deg);
+  }
+  nav a {
+    padding-left: 9px;
+    padding-right: 9px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    border: 2px solid white;
+    font-size: 20px;
+    color: #4F4F4F;
+  }
+
+  nav a:hover {
+    border: 2px solid #4F4F4F;
+    border-radius: 7px;
+    padding-left: 9px;
+    padding-right: 9px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+
+  }
+
+  button:hover {
+    border: 2px solid #A02422;
   }
 }
